Fixed dark mode problem

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #f8f9fa;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: var(--bs-body-bg);
 }
 
 .card {
